--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,30 @@
-.topnav {
+.site-header {
+  display: flex;
+  justify-content: center;
+}
+
+.top-nav {
   overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-link {
   padding: 10px 12px;
   text-decoration: none;
-  font-size: 18px;
+  font-size: 16px;
   color: black;
   text-align: center;
   float: left;
+  text-transform: uppercase;
 }
 
 .nav-link:hover {
   background-color: #ddd;
+}
+
+.nav-link.active {
+  text-decoration: underline;
+  font-weight: bold;
 }
