--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,14 @@
+.container {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .site-header {
   display: flex;
   justify-content: center;
@@ -25,6 +36,56 @@
 }
 
 .nav-link.active {
-  text-decoration: underline;
   font-weight: bold;
+}
+
+.content-link {
+  color: black;
+  font-weight: bold;
+}
+
+.content-body {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  padding: 16px;
+  font-size: 16px;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.content-block {
+  padding: 16px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
+
+.post-heading {
+  font-size: 40px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.post-subheading {
+  font-size: 24px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.post-body {
+  padding: 16px;
+  border-radius: 4px;
+  margin-bottom: 16px;
+}
+
+.post-meta {
+  font-size: 16px;
+  font-weight: bold;
+  margin-bottom: 16px;
+}
+
+.post-quote {
+  font-size: 18px;
+  margin-bottom: 16px;
+  color: gray;
 }
